hal/include/HAL/Analog.hpp

	float getAnalogSampleRateWithModule(uint8_t module, int32_t *status);
	void setAnalogAverageBits(void* analog_port_pointer, uint32_t bits, int32_t *status);
	uint32_t getAnalogAverageBits(void* analog_port_pointer, int32_t *status);
	void setAnalogOversampleBits(void* analog_port_pointer, uint32_t bits, int32_t *status);
	uint32_t getAnalogOversampleBits(void* analog_port_pointer, int32_t *status);
	int16_t getAnalogValue(void* analog_port_pointer, int32_t *status);
	int32_t getAnalogAverageValue(void* analog_port_pointer, int32_t *status);
	int32_t getAnalogVoltsToValue(void* analog_port_pointer, double voltage, int32_t *status);
	float getAnalogVoltage(void* analog_port_pointer, int32_t *status);
	float getAnalogAverageVoltage(void* analog_port_pointer, int32_t *status);
	uint32_t getAnalogLSBWeight(void* analog_port_pointer, int32_t *status);
	int32_t getAnalogOffset(void* analog_port_pointer, int32_t *status);
	bool isAccumulatorChannel(void* analog_port_pointer, int32_t *status);
	void initAccumulator(void* analog_port_pointer, int32_t *status);
	void resetAccumulator(void* analog_port_pointer, int32_t *status);
	void setAccumulatorCenter(void* analog_port_pointer, int32_t center, int32_t *status);