wpilibj/wpilibJava/src/main/java/edu/wpi/first/wpilibj/hal/HALLibrary.java

	/**
	 * Original signature : <code>float getAnalogSampleRateWithModule(uint8_t, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Analog.h:14</i>
	 */
	public static native float getAnalogSampleRateWithModule(byte module, IntBuffer status);
	/**
	 * Original signature : <code>void setAnalogAverageBits(void*, uint32_t, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Analog.h:15</i><br>
	 * @deprecated use the safer methods {@link #setAnalogAverageBits(com.sun.jna.Pointer, int, java.nio.IntBuffer)} and {@link #setAnalogAverageBits(com.sun.jna.Pointer, int, com.sun.jna.ptr.IntByReference)} instead
	 */
	@Deprecated 
	public static native void setAnalogAverageBits(Pointer analog_port_pointer, int bits, IntByReference status);
	/**
	 * Original signature : <code>void setAnalogAverageBits(void*, uint32_t, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Analog.h:15</i>
	 */
	public static native void setAnalogAverageBits(Pointer analog_port_pointer, int bits, IntBuffer status);
	/**
	 * Original signature : <code>uint32_t getAnalogAverageBits(void*, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Analog.h:16</i><br>
	 * @deprecated use the safer methods {@link #getAnalogAverageBits(com.sun.jna.Pointer, java.nio.IntBuffer)} and {@link #getAnalogAverageBits(com.sun.jna.Pointer, com.sun.jna.ptr.IntByReference)} instead
	 */
	@Deprecated 
	public static native int getAnalogAverageBits(Pointer analog_port_pointer, IntByReference status);
	/**
	 * Original signature : <code>uint32_t getAnalogAverageBits(void*, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Analog.h:16</i>
	 */
	public static native int getAnalogAverageBits(Pointer analog_port_pointer, IntBuffer status);
	/**
	 * Original signature : <code>void setAnalogOversampleBits(void*, uint32_t, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Analog.h:17</i><br>
	 * @deprecated use the safer methods {@link #setAnalogOversampleBits(com.sun.jna.Pointer, int, java.nio.IntBuffer)} and {@link #setAnalogOversampleBits(com.sun.jna.Pointer, int, com.sun.jna.ptr.IntByReference)} instead
	 */
	@Deprecated 
	public static native void setAnalogOversampleBits(Pointer analog_port_pointer, int bits, IntByReference status);
	/**
	 * Original signature : <code>void setAnalogOversampleBits(void*, uint32_t, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Analog.h:17</i>
	 */
	public static native void setAnalogOversampleBits(Pointer analog_port_pointer, int bits, IntBuffer status);
	/**
	 * Original signature : <code>uint32_t getAnalogOversampleBits(void*, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Analog.h:18</i><br>
	 * @deprecated use the safer methods {@link #getAnalogOversampleBits(com.sun.jna.Pointer, java.nio.IntBuffer)} and {@link #getAnalogOversampleBits(com.sun.jna.Pointer, com.sun.jna.ptr.IntByReference)} instead
	 */
	@Deprecated 
	public static native int getAnalogOversampleBits(Pointer analog_port_pointer, IntByReference status);
	/**
	 * Original signature : <code>uint32_t getAnalogOversampleBits(void*, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Analog.h:18</i>
	 */
	public static native int getAnalogOversampleBits(Pointer analog_port_pointer, IntBuffer status);
	/**
	 * Original signature : <code>int16_t getAnalogValue(void*, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Analog.h:19</i><br>
	 * @deprecated use the safer methods {@link #getAnalogValue(com.sun.jna.Pointer, java.nio.IntBuffer)} and {@link #getAnalogValue(com.sun.jna.Pointer, com.sun.jna.ptr.IntByReference)} instead
	 */
	@Deprecated 
	public static native short getAnalogValue(Pointer analog_port_pointer, IntByReference status);
	/**
	 * Original signature : <code>int16_t getAnalogValue(void*, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Analog.h:19</i>
	 */
	public static native short getAnalogValue(Pointer analog_port_pointer, IntBuffer status);
	/**
	 * Original signature : <code>int32_t getAnalogAverageValue(void*, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Analog.h:20</i><br>
	 * @deprecated use the safer methods {@link #getAnalogAverageValue(com.sun.jna.Pointer, java.nio.IntBuffer)} and {@link #getAnalogAverageValue(com.sun.jna.Pointer, com.sun.jna.ptr.IntByReference)} instead
	 */
	@Deprecated 
	public static native int getAnalogAverageValue(Pointer analog_port_pointer, IntByReference status);
	/**
	 * Original signature : <code>int32_t getAnalogAverageValue(void*, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Analog.h:20</i>
	 */
	public static native int getAnalogAverageValue(Pointer analog_port_pointer, IntBuffer status);
	/**
	 * Original signature : <code>int32_t getAnalogVoltsToValue(void*, float, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Analog.h:21</i><br>
	 * @deprecated use the safer methods {@link #getAnalogVoltsToValue(com.sun.jna.Pointer, float, java.nio.IntBuffer)} and {@link #getAnalogVoltsToValue(com.sun.jna.Pointer, float, com.sun.jna.ptr.IntByReference)} instead
	 */
	@Deprecated 
	public static native int getAnalogVoltsToValue(Pointer analog_port_pointer, double voltage, IntByReference status);
	/**
	 * Original signature : <code>int32_t getAnalogVoltsToValue(void*, float, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Analog.h:21</i>
	 */
	public static native int getAnalogVoltsToValue(Pointer analog_port_pointer, double voltage, IntBuffer status);
	/**
	 * Original signature : <code>float getAnalogVoltage(void*, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Analog.h:22</i><br>
	 * @deprecated use the safer methods {@link #getAnalogVoltage(com.sun.jna.Pointer, java.nio.IntBuffer)} and {@link #getAnalogVoltage(com.sun.jna.Pointer, com.sun.jna.ptr.IntByReference)} instead
	 */
	@Deprecated 
	public static native float getAnalogVoltage(Pointer analog_port_pointer, IntByReference status);
	/**
	 * Original signature : <code>float getAnalogVoltage(void*, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Analog.h:22</i>
	 */
	public static native float getAnalogVoltage(Pointer analog_port_pointer, IntBuffer status);
	/**
	 * Original signature : <code>float getAnalogAverageVoltage(void*, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Analog.h:23</i><br>
	 * @deprecated use the safer methods {@link #getAnalogAverageVoltage(com.sun.jna.Pointer, java.nio.IntBuffer)} and {@link #getAnalogAverageVoltage(com.sun.jna.Pointer, com.sun.jna.ptr.IntByReference)} instead
	 */
	@Deprecated 
	public static native float getAnalogAverageVoltage(Pointer analog_port_pointer, IntByReference status);
	/**
	 * Original signature : <code>float getAnalogAverageVoltage(void*, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Analog.h:23</i>
	 */
	public static native float getAnalogAverageVoltage(Pointer analog_port_pointer, IntBuffer status);
	/**
	 * Original signature : <code>uint32_t getAnalogLSBWeight(void*, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Analog.h:24</i><br>
	 * @deprecated use the safer methods {@link #getAnalogLSBWeight(com.sun.jna.Pointer, java.nio.IntBuffer)} and {@link #getAnalogLSBWeight(com.sun.jna.Pointer, com.sun.jna.ptr.IntByReference)} instead
	 */
	@Deprecated 
	public static native int getAnalogLSBWeight(Pointer analog_port_pointer, IntByReference status);
	/**
	 * Original signature : <code>uint32_t getAnalogLSBWeight(void*, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Analog.h:24</i>
	 */
	public static native int getAnalogLSBWeight(Pointer analog_port_pointer, IntBuffer status);
	/**
	 * Original signature : <code>int32_t getAnalogOffset(void*, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Analog.h:25</i><br>
	 * @deprecated use the safer methods {@link #getAnalogOffset(com.sun.jna.Pointer, java.nio.IntBuffer)} and {@link #getAnalogOffset(com.sun.jna.Pointer, com.sun.jna.ptr.IntByReference)} instead
	 */
	@Deprecated 
	public static native int getAnalogOffset(Pointer analog_port_pointer, IntByReference status);
	/**
	 * Original signature : <code>int32_t getAnalogOffset(void*, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Analog.h:25</i>
	 */
	public static native int getAnalogOffset(Pointer analog_port_pointer, IntBuffer status);
	/**
	 * Original signature : <code>bool isAccumulatorChannel(void*, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Analog.h:27</i><br>
	 * @deprecated use the safer methods {@link #isAccumulatorChannel(com.sun.jna.Pointer, java.nio.IntBuffer)} and {@link #isAccumulatorChannel(com.sun.jna.Pointer, com.sun.jna.ptr.IntByReference)} instead
	 */
	@Deprecated 
	public static native byte isAccumulatorChannel(Pointer analog_port_pointer, IntByReference status);
	/**
	 * Original signature : <code>bool isAccumulatorChannel(void*, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Analog.h:27</i>
	 */
	public static native byte isAccumulatorChannel(Pointer analog_port_pointer, IntBuffer status);
	/**
	 * Original signature : <code>void initAccumulator(void*, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Analog.h:28</i><br>
	 * @deprecated use the safer methods {@link #initAccumulator(com.sun.jna.Pointer, java.nio.IntBuffer)} and {@link #initAccumulator(com.sun.jna.Pointer, com.sun.jna.ptr.IntByReference)} instead
	 */
	@Deprecated 
	public static native void initAccumulator(Pointer analog_port_pointer, IntByReference status);
	/**
	 * Original signature : <code>void initAccumulator(void*, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Analog.h:28</i>
	 */
	public static native void initAccumulator(Pointer analog_port_pointer, IntBuffer status);
	/**
	 * Original signature : <code>void resetAccumulator(void*, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Analog.h:29</i><br>
	 * @deprecated use the safer methods {@link #resetAccumulator(com.sun.jna.Pointer, java.nio.IntBuffer)} and {@link #resetAccumulator(com.sun.jna.Pointer, com.sun.jna.ptr.IntByReference)} instead
	 */
	@Deprecated 
	public static native void resetAccumulator(Pointer analog_port_pointer, IntByReference status);
	/**
	 * Original signature : <code>void resetAccumulator(void*, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Analog.h:29</i>
	 */
	public static native void resetAccumulator(Pointer analog_port_pointer, IntBuffer status);
	/**
	 * Original signature : <code>void setAccumulatorCenter(void*, int32_t, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Analog.h:30</i><br>
	 * @deprecated use the safer methods {@link #setAccumulatorCenter(com.sun.jna.Pointer, int, java.nio.IntBuffer)} and {@link #setAccumulatorCenter(com.sun.jna.Pointer, int, com.sun.jna.ptr.IntByReference)} instead
	 */
	@Deprecated 
	public static native void setAccumulatorCenter(Pointer analog_port_pointer, int center, IntByReference status);
	/**
	 * Original signature : <code>void setAccumulatorCenter(void*, int32_t, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Analog.h:30</i>
	 */
	public static native void setAccumulatorCenter(Pointer analog_port_pointer, int center, IntBuffer status);
